# speech-feat

./: CMakeLists.txt  README.md
src/: Ceplifter.cpp  Dct.cpp  Derivatives.cpp  Dither.cpp  Mfcc.cpp  Mfsc.cpp  PowerSpectrum.cpp  PreEmphasis.cpp  SpeechUtils.cpp  TriFilterbank.cpp  Windowing.cpp
test/: CMakeLists.txt  CeplifterTest.cpp  DctTest.cpp  DerivativesTest.cpp  DitherTest.cpp  MfccTest.cpp  PreEmphasisTest.cpp  SpeechUtilsTest.cpp  TriFilterbankTest.cpp  WindowingTest.cpp
